<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 Helsingin Diakonissalaitos and the authors
  
  The MIT License (MIT)
  
  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), 
  to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, 
  and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  
  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  
  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO 
  THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS 
  OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
  OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
     >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    style="@style/LinearBackground"
	    android:background="@drawable/card_background"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="4dp"
	    android:paddingBottom="50dp">
	        
	    <TextView
	        android:id="@+id/starting_sprint_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="40dp"
	        android:layout_marginTop="40dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:text="@string/start_a_sprint"
	        android:textColor="@color/actionbar_green"
	        android:textSize="25sp" />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="20dp"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/number_of_days_title"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/number_of_days"
	            android:textColor="@color/medium_gray"
	            android:layout_marginBottom="6dp"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/number_of_days_edit"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="105"
	            android:ems="10"
	            android:inputType="numberSigned" >
	        </EditText>
	
	    </LinearLayout>
	    
	     <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="20dp"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/name_of_sprint_title"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:textColor="@color/medium_gray"
	            android:text="@string/name_of_the_sprint"
	            android:layout_marginBottom="6dp"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/name_of_sprint_edit"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/default_sprint_title"
	            android:ems="10"
	            android:inputType="text" >
	        </EditText>
	
	    </LinearLayout>

	</LinearLayout>
	</ScrollView>
	<include layout="@layout/element_main_activity_button_separator"></include>
     <Button
         android:id="@+id/start_sprint_button"
         android:layout_width="match_parent"
	     android:layout_height="48dp"
         android:text="@string/start_the_sprint"
         style="?android:attr/borderlessButtonStyle"
         android:textColor="@color/dark_gray" />

</LinearLayout>
