<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 Helsingin Diakonissalaitos and the authors
  
  The MIT License (MIT)
  
  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), 
  to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, 
  and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  
  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  
  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO 
  THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS 
  OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
  OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/card_background" >
    <LinearLayout    
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
	     <TextView
         	android:id="@+id/event_title"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
            android:gravity="left|center"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/dark_blue"
            android:text="@string/how_did_the_event_go"
            android:textSize="25sp" />
	</LinearLayout>
	<ScrollView 
	    android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    <TextView
		        android:id="@+id/amount_of_drinks_yesterday"
		        android:text=""
		        android:layout_width="match_parent"
		   		android:layout_height="wrap_content"
		        android:gravity="center"/>
		    
		    <TextView
		        android:id="@+id/name"
		        android:text=""
		        android:layout_width="match_parent"
		   		android:layout_height="wrap_content"
		        android:gravity="center"
		        style="?android:attr/textAppearanceMedium"/>
		    
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
		        <TextView
			        android:text="@string/amount_of_drinks"
			        android:layout_width="0dp"
			   		android:layout_height="wrap_content"
			   		android:layout_weight="1"
			        android:layout_gravity="center"
			        android:gravity="center"/>

		        <Spinner
		            android:id="@+id/planned_drinks_spinner"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1" />
		    </LinearLayout>
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
		        <TextView
			        android:text="@string/when_to_go"
			        android:layout_width="0dp"
			   		android:layout_height="wrap_content"
			   		android:layout_weight="1"
			        android:layout_gravity="center"
			        android:gravity="center"/>

		        <Spinner
		            android:id="@+id/start_time_spinner"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1" />
		    </LinearLayout>
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
		        <TextView
			        android:text="@string/end_time"
			        android:layout_width="0dp"
			   		android:layout_height="wrap_content"
			   		android:layout_weight="1"
			        android:layout_gravity="center"
			        android:gravity="center"/>

		        <Spinner
		            android:id="@+id/end_time_spinner"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1" />
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
