<!--
  Copyright (c) 2014 Helsingin Diakonissalaitos and the authors
   
  The MIT License (MIT)
   
  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), 
  to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, 
  and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
   
  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    
  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO 
  THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS 
  OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
  OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_fragment_scroll_view"
    style="@style/ScrollViewBackground" >

    <FrameLayout 
       	android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
    	android:id="@+id/root_view">
	    <LinearLayout
	        android:id="@+id/main_activity_fragmenet_layout"
			style="@style/LinearBackground"
			android:orientation="vertical"
	        tools:context=".MainScreen$TodaySectionFragment" >      
	
	         <LinearLayout
	            android:id="@+id/main_activity_mood_history_button"
			    android:orientation="horizontal"
			    style="@style/CardButtonLinearLayout"
			    android:layout_marginTop="6dp" >
			    <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:text="@string/show_mood_history"
			        android:layout_weight="1"
			        android:textColor="@color/orange"
			        android:gravity="center"
			        android:fontFamily="sans-serif-light"
			        style="@android:style/TextAppearance.Medium"
			        />
			        <ImageView
			        android:src="@drawable/day_history_icon2"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			         />
			</LinearLayout>
			
	         <LinearLayout
	            android:id="@+id/main_activity_relation_history_button"
			    android:orientation="horizontal"
			    style="@style/CardButtonLinearLayout" >
			    <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:text="@string/data_analysis"
			        android:layout_weight="1"
			        android:textColor="@color/orange"
			        android:gravity="center"
			        android:fontFamily="sans-serif-light"
			        style="@android:style/TextAppearance.Medium"
			        />
			        <ImageView
			        android:src="@drawable/relation_icon"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			         />
			</LinearLayout>
			
	         <LinearLayout
	            android:id="@+id/main_activity_event_history_button"
			    android:orientation="horizontal"
			    style="@style/CardButtonLinearLayout" >
			    <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:text="@string/event_history"
			        android:layout_weight="1"
			        android:textColor="@color/orange"
			        android:gravity="center"
			        android:fontFamily="sans-serif-light"
			        style="@android:style/TextAppearance.Medium"
			        />
			        <ImageView
			        android:src="@drawable/calendar_history_icon"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			         />
			</LinearLayout>
	
	    </LinearLayout>
	</FrameLayout>
</ScrollView>
